<resources>
    <string name="app_name">Explore le monde </string>
    <string name="Introduction1"> Le voyage est la seule chose qui vous rend plus riche de connaissances, de souvenirs et d expériences.</string>
    <string name="Introduction2">Pour tous ceux qui sont intéressés à voyager, patient à découvrir d autres cultures et attitudes cette application permet d explorer certains pays du monde.
Si vous êtes intéressé, inscrivez-vous à la page suivante.</string>
    <string name="devinette1">Je suis une ville côtière en Australie célèbre pour mon opéra emblématique et mon Harbour Bridge ?</string>
    <string name="devinette2">Je suis un célèbre parc d attractions situé en Floride, aux États-Unis.Je suis connu pour mes manèges à sensations fortes et mes spectacles ?</string>
    <string name="devinette3">Je suis une ville en Espagne connue pour mes célèbres bâtiments modernistes, notamment la Casa Batlló et la Sagrada Familia ?</string>
    <string name="quiz1"> 1. Dans quel pays peut-on visiter la cité perdue des Incas, le Machu Picchu ? </string>
    <string name="quiz2">2. ou se trouve le parc Güell ?</string>
    <string name="quiz3">3. Dans quel pays se trouve la ville de Dubrovnik, surnommée "la perle de l'Adriatique" ?</string>
    <string name="sydney">Sydney est la plus grande ville d Australie et la capitale de l État de Nouvelle-Galles du Sud. Elle est située sur la côte est du pays, le long de la baie de Sydney. La ville est célèbre pour son opéra emblématique, qui est l un des bâtiments les plus reconnaissables au monde. Elle est également connue pour ses plages magnifiques, ses parcs publics vastes et ses quartiers animés, comme Darling Harbour et The Rocks. Sydney est une ville multiculturelle, offrant une grande variété de cuisines, d arts et de divertissements. Elle est considérée comme l une des villes les plus agréables à vivre au monde, grâce à son climat doux, sa qualité de vie élevée et sa scène culturelle riche et diversifiée.</string>
    <string name="floride">La Floride est un État situé dans le sud-est des États-Unis, qui est entouré par l océan Atlantique à l est et le golfe du Mexique à l ouest. C est l un des États les plus visités des États-Unis en raison de son climat subtropical chaud et de ses nombreuses attractions touristiques telles que Disney World, Universal Studios et Miami Beach. Les visiteurs peuvent profiter d une grande variété d activités, notamment la randonnée, la pêche, le golf, la plongée sous-marine, la voile, le kayak, et bien plus encore.
        La Floride est également connue pour ses parcs nationaux, ses plages de sable blanc, ses récifs coralliens et sa faune diversifiée. Les parcs nationaux les plus populaires de la Floride incluent les Everglades, les îles Dry Tortugas et le parc national de Biscayne.</string>
    <string name="barcelone">Barcelone est une ville captivante située sur la côte nord-est de l Espagne. Elle est réputée pour son architecture unique, notamment les œuvres de l architecte Antoni Gaudí, comme la Sagrada Familia et le Parc Güell. La ville possède également une riche histoire et une culture vibrante, reflétée dans ses nombreux musées, galeries d art et festivals annuels. Les plages de Barcelone sont également une attraction majeure, avec des kilomètres de sable blanc et une mer bleue cristalline. Les rues animées et les places pittoresques de Barcelone regorgent de restaurants, bars et cafés, offrant une expérience culinaire exceptionnelle et une vie nocturne animée.</string>
    <string name="perou">Le Pérou est un pays fascinant situé en Amérique du Sud, qui attire chaque année des millions de visiteurs du monde entier. Le pays est célèbre pour ses sites archéologiques tels que Machu Picchu, une cité inca perchée sur une montagne, et la ville sacrée de Cuzco, qui était autrefois la capitale de l empire Inca. Le Pérou est également connu pour sa cuisine unique, avec des plats tels que le ceviche, le lomo saltado et le rocoto relleno. Les paysages naturels sont tout aussi impressionnants, avec des montagnes majestueuses, des déserts arides, des forêts tropicales luxuriantes et des côtes pittoresques. Les habitants du Pérou sont chaleureux et accueillants, et leurs traditions et leur culture sont riches et diversifiées.</string>
    <string name="dubrovnik">Dubrovnik est une ville côtière de la Croatie connue pour son architecture médiévale bien préservée et ses monuments historiques remarquables. L un des sites les plus célèbres de la ville est le système de remparts, qui entoure la vieille ville de Dubrovnik et offre une vue imprenable sur la mer Adriatique. La vieille ville elle-même regorge de monuments impressionnants, notamment la cathédrale de l Assomption de la Vierge Marie, une magnifique église baroque qui remonte au XVIIIe siècle. Le Palais des Recteurs est un autre bâtiment remarquable, qui était autrefois le siège du gouvernement de la République de Raguse, la ville-état qui a gouverné Dubrovnik pendant des siècles. L église Saint-Blaise est un autre joyau architectural de la ville,le saint patron de Dubrovnik.</string>
</resources>